# umiusi_control_demo

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
include/umiusi_control_demo/: umiusi_controller.hpp
include/umiusi_control_demo/hardware/: thruster_joint.hpp  thruster_thrust.hpp
launch/: launch.py  launch.xml
plugin/: umiusi_controller_plugin.xml  umiusi_hardware_plugin.xml
src/umiusi_control_demo/: umiusi_controller.cpp
src/umiusi_control_demo/hardware/: thruster_joint.cpp  thruster_thrust.cpp
urdf/: umiusi.urdf.xacro
